--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,10 +1,17 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Index
+    Statistics
 {% endblock %}
 
 
+{% block body %}
+
+onload="setCatBackground()"
+
+{% endblock %}
+
+<!--
 {% block searchBar %}
 
   <form>
@@ -43,19 +50,82 @@
   <hr>
 
 {% endblock %}
-
-
-{% block expenseModalAction %}/{% endblock %}
-
-{% block incomeModalAction %}/{% endblock %}
-
-{% block tripModalAction %}/{% endblock %}
+-->
 
 
 {% block main %}
 
+<div class="mb-5">
+  <h1>Statistics</h1>
+  <hr>
+</div>
+
+
+<div class="btn-group mb-4" role="group" aria-label="Basic example">
+  <button type="button" class="btn btn-primary material-icons" onclick="changeToPrevMonthStat()">keyboard_arrow_left</button>
+  <button type="button" class="btn btn-primary material-icons" onclick="changeToNextMonthStat()">keyboard_arrow_right</button>
+</div>
+
+
+<div class="wrapper">
+    <div class="title text-center mb-5">
+      <h1></h1>
+    </div>
+    <div class="chart-wrapper">
+      <canvas id="myChart" aria-label="chart" role="img"></canvas>
+    </div>
+  </div>
+</div>
 
 
 
+<div class="container d-flex justify-content-center align-items-center">
+<table class="table">
+  <tbody>
+
+  {% for category in month %}
+
+    <tr id="cat_{{ loop.index0 }}" class="cat-background">
+      <td id="perc_{{ loop.index0 }}"scope="col" class="text-left">{{ category['percentage'] }}%</td>
+      <td id="label_{{ loop.index0 }}"scope="col" class=""><a href="/statistics/{{ category['label'] }}">{{ category['label'] }}</a></td>
+      <td id="amount_{{ loop.index0 }}"scope="col" class="text-right">€ {{ category['exp_per_category'] }}</td>
+    </tr>
+
+  {% endfor %}
+
+    <tr>
+      <td></td>
+      <td></td>
+      <td class="text-right font-weight-bold">€ {{ monthTotal }}</td>
+    </tr>
+
+  </tbody>
+</table>
+</div>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+<script>
+var ctx = document.getElementById('myChart').getContext('2d');
+
+
+
+
+var labels = [];
+var data = [];
+{% for category in month %}
+  labels.push("{{ category['label'] }}");
+  data.push("{{ category['percentage'] }}");
+{% endfor %}
+
+numberOfCategories = labels.length;
+
+console.log(labels)
+</script>
+
+<script type="text/javascript" src="/static/myChart.js"></script>
 
 {% endblock %}
